--- a/GridView/GridView/res/layout/activity_add_class.xml
+++ b/GridView/GridView/res/layout/activity_add_class.xml
@@ -46,14 +46,24 @@
         android:hint="@+string/days_attending"
         android:ems="10" />
 
+    <EditText
+        android:id="@+id/roomnumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/daysOfClass"
+        android:hint="Room Number"
+        android:ems="10" />
+
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/daysOfClass"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/sample"
         android:onClick="addClass"
-        android:text="Add"
-        android:background="@drawable/sample" />
+        android:text="Add" />
 
 </RelativeLayout>
